Reworked appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,98 +28,170 @@ install:
         #"i686-6.3.0-posix-dwarf-rt_v5-rev1"
         #"i686-5.3.0-posix-dwarf-rt_v4-rev0"
         $env:GCC="i686-6.3.0-posix-dwarf-rt_v5-rev1"
-        $env:MSYSTEM="MINGW32"
-        $env:mname="mingw32"
+        $env:MSYSTEM="MINGW32" ; $env:mname="mingw32" ; $env:arch="i686"
       }
       elseif ($env:platform -Match "mingw64630x8664") 
       {
         #"x86_64-7.3.0-posix-seh-rt_v5-rev0"
         $env:GCC="x86_64-6.3.0-posix-seh-rt_v5-rev1"
-        $env:MSYSTEM="MINGW64"
-        $env:mname="mingw64"
+        $env:MSYSTEM="MINGW64" ;  $env:mname="mingw64" ; $env:arch="x86_64"
       }
       elseif ($env:platform -Match "mingw64720x8664") 
       {
         #"x86_64-7.3.0-posix-seh-rt_v5-rev0"
         $env:GCC="x86_64-7.2.0-posix-seh-rt_v5-rev1"
-        $env:MSYSTEM="MINGW64"
-        $env:mname="mingw64"
+        $env:MSYSTEM="MINGW64" ;  $env:mname="mingw64" ; $env:arch="x86_64"
       }
       elseif ($env:platform -Match "mingw64730x8664") 
       {
         #"x86_64-7.3.0-posix-seh-rt_v5-rev0"
         $env:GCC="x86_64-7.3.0-posix-seh-rt_v5-rev0"
-        $env:MSYSTEM="MINGW64"
-        $env:mname="mingw64"
+        $env:MSYSTEM="MINGW64" ; $env:mname="mingw64" ; $env:arch="x86_64"
       }
       #"x86_64-7.3.0-posix-seh-rt_v5-rev0"
-      
+  - ps: $env:allmsys=$true ; $env:domingw=$false      
   - ps: |
       if ($true)
       {
         $env:PATH="C:\mingw-w64\$env:GCC\$env:mname\bin;$env:PATH"
         md c:\projects\gdl\win32libs
         md c:\projects\gdl\mingw
-        # Python #This is the Windows' python which will do Python but is unsuitable to link with GDL
-        #$env:PYTHON_ROOT="C:\Python27"
-
-        # scripts/XXX.msys make gdl/mingw/mingw32 and load it.
-        cd c:/projects/gdl
-        c:/msys64/usr/bin/bash.exe -lc 'cd $OLDPWD &&. ./scripts/appveyor_1.msys'
-        cd c:/projects/gdl/mingw
-        rm mingw-w64-*tar.xz
-        $env:LOCALM32="c:/projects/gdl/mingw/$env:mname"
-        $env:WXNAME="wxWidgets-3.0.4"
-        $env:GMNAME="GraphicsMagick-1.3.30"
-
-        # PLplot
+        md c:\projects\gdl\build ;  $env:BLDDIR="c:\projects\gdl\build"
         cd c:\projects\gdl\win32libs
-        appveyor DownloadFile http://downloads.sourceforge.net/project/plplot/plplot/5.13.0%20Source/plplot-5.13.0.tar.gz
-        echo " plplot building.  we make an MSYS build (from build/plplot/msys)"
-        appveyor DownloadFile http://downloads.sourceforge.net/project/graphicsmagick/graphicsmagick/1.3.30/GraphicsMagick-1.3.30.tar.xz
-        cd c:/projects/gdl
-        c:/msys64/usr/bin/bash.exe -lc 'cd $OLDPWD &&. ./scripts/appveyor_plplot.msys'
-        # WxWidgets (old school inclusion)
-        cd c:\projects\gdl\win32libs
-        appveyor DownloadFile https://github.com/wxWidgets/wxWidgets/releases/download/v3.0.4/wxWidgets-3.0.4.7z
-        7z x wxWidgets-3.0.4.7z -y -o"wxWidgets-3.0.4"
-        cd c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw
-        mingw32-make SHELL=cmd -f makefile.gcc setup_h BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
-        mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
-        # Below 2 lines are required for wxWidgets-3.0.4, don't know why
-        copy c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlg.o c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlgo
-        mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
-        $env:WXWIDGETS_ROOT="c:\projects\gdl\win32libs\wxWidgets-3.0.4"
-        # End WxWidgets (old school inclusion)
-        #$env:wxWidgets_ROOT="c:\projects\gdl\win32libs\$env:WXNAME"
-        $env:PLPLOTDIR="C:\projects\gdl\mingw\plplot-5.13"
-        mkdir $env:wxWidgets_ROOT
-        # $env:wxWidgets_ROOT is an attempt to make a WIN32-compatible wxwidget.
-        #  It doesn't work.
-
-        copy c:/projects/gdl/mingw/plplot-5.13/lib/plplot5.13.0/drivers/*.dll c:/projects/gdl/mingw/plplot-5.13/bin -ErrorAction silentlycontinue
-        copy c:/projects/gdl/mingw/plplot-5.13/* c:/projects/gdl/mingw/$env:mname/  -Recurse -Force
-        
-        # Eigen is downloaded from pre-built repository via scripts/appveyor_1.msys
-        # GSL loaded from scripts/appveyor_1.msys
+        $env:CC="C:/mingw-w64/$env:GCC/$env:mname/bin/gcc"
+        $env:CXX="C:/mingw-w64/$env:GCC/$env:mname/bin/g++"
+       }
+  - ps: |
+      if ($true)
+      {
         # BSD-XDR
-        cd c:/projects/gdl/win32libs
-        appveyor DownloadFile https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/bsd-xdr/bsd-xdr-1.0.0.tar.gz
+        cd c:\projects\gdl\win32libs
+        appveyor DownloadFile `
+          https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/bsd-xdr/bsd-xdr-1.0.0.tar.gz
         tar zxf bsd-xdr-1.0.0.tar.gz
         cd bsd-xdr-1.0.0
         sed -e 's/-Wall/-Wall -Wno-pointer-to-int-cast #/' -i Makefile
-        sed -e 's/%hh/%/g' -i src/test/test_data.c
+        sed -i 's/%hh/%/g' src\test\test_data.c
         md mingw
-        md mingw/lib
-        mingw32-make -f Makefile -j4 PLATFORM=mingw STAMP=clean TEST_PROGS="" top_srcdir="c:/projects/gdl/win32libs/bsd-xdr-1.0.0" recursive-all
-        mv mingw/libxdr.dll.a c:/projects/gdl/mingw/$env:mname/lib
-        mv rpc c:/projects/gdl/mingw/$env:mname/include
-        mv mingw/mgwxdr-0.dll c:/projects/gdl/mingw/$env:mname/bin
-       
+        md mingw\lib
+        mingw32-make -f Makefile -j4 PLATFORM=mingw STAMP=clean TEST_PROGS="" top_srcdir="c:\projects\gdl\win32libs\bsd-xdr-1.0.0" recursive-all >  $env:BLDDIR/makexdr.out
+        mv mingw\libxdr.dll.a c:\projects\gdl\win32libs\lib
+        mv rpc c:\projects\gdl\win32libs\include
+        mv mingw\mgwxdr-0.dll c:\projects\gdl\win32libs\bin
+      }
+  - ps: |
+      if ($env:allmsys)
+      {
+        # scripts/XXX.msys make gdl/mingw/mingw32 and load it.
+        cd c:/projects/gdl
+        # $env:GMNAME="GraphicsMagick-1.3.30"
+        c:/msys64/usr/bin/bash.exe -lc 'cd $OLDPWD &&. ./scripts/appveyor_1.msys'
+        $env:WXNAME="wxWidgets-3.0.2-17"
+        cd c:/projects/gdl/mingw
+        rm mingw-w64-*tar.xz
+        $env:LOCALM32="c:/projects/gdl/mingw/$env:mname"
+        cd c:\projects\gdl\win32libs
+        appveyor DownloadFile `
+          http://downloads.sourceforge.net/project/plplot/plplot/5.13.0%20Source/plplot-5.13.0.tar.gz
+        c:/msys64/usr/bin/bash.exe -lc 'cd /c/projects/gdl &&. ./scripts/appveyor_plplot.msys'
+        $env:PLPLOTDIR="C:\projects\gdl\mingw\plplot-5.13"
+        $env:WXROOT="C:\projects\gdl\mingw\$env:WXNAME"
+      }
+      if ($env:domingw)
+      {
+        # wxWidgets
+        $env:WX_TOP="c:\projects\gdl\win32libs\wxWidgets-3.0.4"
+        appveyor DownloadFile `
+          https://github.com/wxWidgets/wxWidgets/releases/download/v3.0.4/wxWidgets-3.0.4.7z
+        7z x wxWidgets-3.0.4.7z -y -o"wxWidgets-3.0.4"
+        cd c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw
+        mingw32-make SHELL=cmd -f makefile.gcc setup_h BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1 > $env:BLDDIR/makewx.out
+        echo "$env:WX_TOP mingw32-make (1) finished" >>  $env:BLDDIR/makewx.out
+        echo "$env:WX_TOP mingw32-make (1) finished" 
+        mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1 >> $env:BLDDIR/makewx.out
+        echo "$env:WX_TOP mingw32-make (2) finished" >>  $env:BLDDIR/makewx.out
+        echo "$env:WX_TOP mingw32-make (2) finished" 
+        # Below 2 lines are required for wxWidgets-3.0.4, don't know why
+        copy c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlg.o c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlgo
+        mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
+        # for mingw usage we need to define wxWidgets_ROOT_DIR
+        #
+        $env:wxWidgets_ROOT_DIR=$env:WX_TOP
+        # The above builds ok but does not link with plplot build.
+        # PLplot
+        cd c:\projects\gdl\win32libs
+        appveyor DownloadFile `
+          http://downloads.sourceforge.net/project/plplot/plplot/5.13.0%20Source/plplot-5.13.0.tar.gz
+        tar zxf plplot-5.13.0.tar.gz
+        md plplot-5.13.0/build -ErrorAction silentlycontinue
+        cd plplot-5.13.0/build ; rm * -Recurse  -ErrorAction silentlycontinue
+        cd c:\projects\gdl\win32libs
+        #
+        C:\msys64\usr\bin\bash.exe -lc "mkdir -p /c/projects/gdl/mingw/plplot-5.13"
+        $env:PLPLOTDIR="C:\projects\gdl\mingw\plplot-5.13"
+        # plplot failed to bring in the wxwidgets build because the version is not recognized in the
+        # cmake module findwxwidgets.cmake (customized in plplot)
+        #
+        # Patch to cmake/modules/FindwxWidgets.cmake: scripts/patch/Findwx.cmake.patch:
+        #
+        c:\msys64\usr\bin\bash.exe -lc 'cd /c/projects/gdl/win32libs && . /c/projects/gdl/scripts/patch/patch_plplot.sh'
+        echo "mingw build of plplot is done via dos commands scripts/appveyor_plplot.bat"
+        #
+        # (to do that, activate the line below the next block.)
+        }
+  #
+  #- cmd /K ..\scripts\appveyor_plplot.bat This leaves wxWidgets driver behind !!  - ps: |
+  - ps: |
+      if ($false)
+      {
+       # Eigen
+        cd c:\projects\gdl\win32libs
+        appveyor DownloadFile `
+          https://bitbucket.org/eigen/eigen/get/3.3.4.tar.bz2 -FileName eigen-eigen-5a0156e40feb.tar.bz2
+        tar jxf eigen-eigen-5a0156e40feb.tar.bz2
+        md eigen-eigen-5a0156e40feb/build
+        # cmake is generating PS error, plain make seems to do alright.
+        #cmake "eigen-eigen-5a0156e40feb" "-Beigen-eigen-5a0156e40feb/build" -G "MinGW Makefiles" "-DCMAKE_BUILD_TYPE=$($env:CONFIGURATION)" -DCMAKE_INSTALL_PREFIX=c:\projects\gdl\win32libs > $env:BLDDIR/eigen3.out
+        cd eigen-eigen-5a0156e40feb/build
+        echo " eigen3 (eigen-eigen-5a0156e40feb) to be made " 
+        #echo " eigen3 (eigen-eigen-5a0156e40feb) to be made "  >> $env:BLDDIR/eigen3.out
+        mingw32-make install >> $env:BLDDIR/eigen3.out
+        }
+  - ps: |
+      if ($env:domingw) # gsl is downloaded in appveyor_1.msys
+      {
+        # GSL
+        c:\msys64\usr\bin\bash.exe -lc 'cd /c/projects/gdl/win32libs && . /c/projects/gdl/scripts/appveyor_gsl.msys'
+        }
+  - ps: |
+      if ($env:domingw)
+      { 
+        # GNUWin32 (GNU Readline, Zlib, libPNG, PCRE, libtiff)
+        # TODO: Find appropriate libtiff with TIFFField, TIFFFieldWithTag and TIFFFieldName (and libgeotiff?)
+        #       (Remember to remove -DTIFF=OFF -DGEOTIFF=OFF from build_script when done)
+        cd c:\projects\gdl\win32libs
+        appveyor DownloadFile https://downloads.sourceforge.net/project/gnuwin32/readline/5.0-1/readline-5.0-1-lib.zip
+        appveyor DownloadFile https://downloads.sourceforge.net/project/gnuwin32/zlib/1.2.3/zlib-1.2.3-lib.zip
+        appveyor DownloadFile https://downloads.sourceforge.net/project/gnuwin32/libpng/1.2.37/libpng-1.2.37-lib.zip
+        appveyor DownloadFile https://downloads.sourceforge.net/project/gnuwin32/pcre/7.0/pcre-7.0-lib.zip
+        #appveyor DownloadFile https://downloads.sourceforge.net/project/gnuwin32/tiff/3.8.2-1/tiff-3.8.2-1-lib.zip
+        7z x readline-5.0-1-lib.zip
+        7z x zlib-1.2.3-lib.zip
+        7z x libpng-1.2.37-lib.zip
+        7z x pcre-7.0-lib.zip
+        #7z x tiff-3.8.2-1-lib.zip
+        appveyor DownloadFile https://downloads.sourceforge.net/project/gnuwin32/readline/5.0-1/readline-5.0-1-bin.zip
+        appveyor DownloadFile https://downloads.sourceforge.net/project/gnuwin32/zlib/1.2.3/zlib-1.2.3-bin.zip
+        appveyor DownloadFile https://downloads.sourceforge.net/project/gnuwin32/libpng/1.2.37/libpng-1.2.37-bin.zip
+        appveyor DownloadFile https://downloads.sourceforge.net/project/gnuwin32/pcre/7.0/pcre-7.0-bin.zip
+        #appveyor DownloadFile https://downloads.sourceforge.net/project/gnuwin32/tiff/3.8.2-1/tiff-3.8.2-1-bin.zip
+        7z x readline-5.0-1-bin.zip -y
+        7z x zlib-1.2.3-bin.zip -y
+        7z x libpng-1.2.37-bin.zip -y
+        7z x pcre-7.0-bin.zip -y
+        #7z x tiff-3.8.2-1-bin.zip -y
       }
   # - if %platform%==mingw64630x8664 set PATH=C:\mingw-w64\x86_64-6.3.0-posix-seh-rt_v5-rev1\mingw32\bin;%PATH%
-  # python needs to be python built in mingw, not the python for windows.
-  # - if %platform%==mingw64630x8664 set PYTHON_ROOT=C:\Python27-x64
 
 before_build:
   # disabling tests that failed from the get-go on Windows (temporarily!)
@@ -243,9 +315,9 @@ before_build:
   - ps: cd  C:\projects\gdl
 
 build_script:
-  - C:\msys64\usr\bin\bash.exe -lc "cd /c/projects/gdl &&.  ./scripts/win32/bld_gm32.msys"
-  #- C:\msys64\usr\bin\bash.exe -lc "cd /c/projects/gdl &&. ./scripts/appveyor_gdl.msys"
-  - cmd /K scripts\mingw-bldgdl
+  #- C:\msys64\usr\bin\bash.exe -lc "cd /c/projects/gdl &&.  ./scripts/win32/bld_gm32.msys"
+  - C:\msys64\usr\bin\bash.exe -lc "cd /c/projects/gdl &&. ./scripts/appveyor_gdl.msys"
+  #- cmd /K scripts\mingw-bldgdl
 
 on_failure:
   - ps: cat c:\projects\gdl\build\testsuite\Testing\Temporary\LastTest.log
