use "make" not "make -j4" for bsd-xdr

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -137,7 +137,7 @@ install:
         sed -i 's/%hh/%/g' src/test/test_data.c
       }
   #        mingw32-make -f Makefile -j4 PLATFORM=mingw STAMP=clean TEST_PROGS="" top_srcdir="c:\projects\gdl\win32libs\bsd-xdr-1.0.0" recursive-all >  $env:BLDDIR/makexdr.out
-  - C:\msys64\usr\bin\bash.exe -lc "oldpwd=$OLDPWD &&. /etc/profile && cd $oldpwd && make -j4"
+  - C:\msys64\usr\bin\bash.exe -lc "oldpwd=$OLDPWD &&. /etc/profile && cd $oldpwd && make"
   - ps: |
       if ($true)
       {
