--- a/appveyor.yml
+++ b/appveyor.yml
@@ -345,7 +345,7 @@ after_build:
   - ps: copy -r $env:PLPLOTDIR/share/plplot5.13.0 c:/projects/gdl/install/plplot5.13/lib
   - ps: copy INSTALL.plplot c:/projects/gdl/install
   # Get plplot info placed:
-
+  - ps: copy scripts/rungdl.bat c:/projects/gdl/install/rungdl.bat
   - cd c:\projects\gdl
   - 7z a gdl_build.zip install build win32libs mingw
   # - ctest -C Release --output-on-failure
