--- a/appveyor.yml
+++ b/appveyor.yml
@@ -347,7 +347,7 @@ after_build:
   # Get plplot info placed:
   - ps: copy scripts/rungdl.bat c:/projects/gdl/install/rungdl.bat
   - cd c:\projects\gdl
-  - 7z a gdl_build.zip install build win32libs mingw
+  - 7z a gdl_build.zip install build
   # - ctest -C Release --output-on-failure
   # python needs to be python built in mingw, not the python for windows.
   # - python -c "import gdl; dir(gdl)"
