--- a/appveyor.yml
+++ b/appveyor.yml
@@ -339,12 +339,16 @@ after_build:
   # bring in the driver's dll to the installation directory.
   # there are also .driver_info files here the plplot needs to find.
   # also in share/plplot-5.13.0 there are mapping and color files.
-
+  - ps: $dyndrivers = Test-path -Path  "$env:PLPLOTDIR/lib/plplot5.13.0/drivers"
   - ps: |
-    if (Test-path "$env:PLPLOTDIR/lib/plplot5.13.0/drivers")
-    {
-    copy $env:PLPLOTDIR/lib/plplot5.13.0/drivers/*.dll c:/projects/gdl/install/gdl/bin -ErrorAction silentlycontinue
-    }               # evidently, the -erroraction wasn't sufficient to protect this.
+      if ( $dyndrivers -eq $true )
+      {
+       copy $env:PLPLOTDIR/lib/plplot5.13.0/drivers/*.dll c:/projects/gdl/install/gdl/bin
+      }               # evidently, the -erroraction wasn't sufficient to protect this.
+      else
+      {
+      echo "No dynamic driver directory, assumed no dynamic drivers."
+      }
   - ps: copy -r $env:PLPLOTDIR/lib/plplot5.13.0 c:/projects/gdl/install/plplot5.13
   - ps: copy -r $env:PLPLOTDIR/share/plplot5.13.0 c:/projects/gdl/install/plplot5.13/lib
   - ps: copy INSTALL.plplot c:/projects/gdl/install
