--- a/appveyor.yml
+++ b/appveyor.yml
@@ -339,17 +339,18 @@ after_build:
   # bring in the driver's dll to the installation directory.
   # there are also .driver_info files here the plplot needs to find.
   # also in share/plplot-5.13.0 there are mapping and color files.
-  - ps: $dyndrivers = Test-path -Path  "$env:PLPLOTDIR/lib/plplot5.13.0/drivers"
+  - ps: $dyndrivers = Test-path -Path  "$env:PLPLOTDIR/lib/plplot5.13.0"
   - ps: |
       if ( $dyndrivers -eq $true )
       {
        copy $env:PLPLOTDIR/lib/plplot5.13.0/drivers/*.dll c:/projects/gdl/install/gdl/bin
+       copy -r $env:PLPLOTDIR/lib/plplot5.13.0 c:/projects/gdl/install/plplot5.13
       }               # evidently, the -erroraction wasn't sufficient to protect this.
       else
       {
       echo "No dynamic driver directory, assumed no dynamic drivers."
       }
-  - ps: copy -r $env:PLPLOTDIR/lib/plplot5.13.0 c:/projects/gdl/install/plplot5.13
+  
   - ps: copy -r $env:PLPLOTDIR/share/plplot5.13.0 c:/projects/gdl/install/plplot5.13/lib
   - ps: copy INSTALL.plplot c:/projects/gdl/install
   # Get plplot info placed:
