--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_install:
     # TEMPORARILY disabling tests that did not work at "day zero" (i.e. SF -> github migration)
     - if [ $TRAVIS_OS_NAME == osx ]; then export SEDCMD="sed -i ''"; fi 
     - if [ $TRAVIS_OS_NAME == linux ]; then export SEDCMD="sed -i"; fi 
-    - $SEDCMD '/test_bytscl.pro/d'           testsuite/Makefile.am # TODO!
+    - $SEDCMD '/test_bytscl.pro/d'           testsuite/Makefile.am # IDL complains also!!!
     - $SEDCMD '/test_dicom.pro/d'            testsuite/Makefile.am # TODO!
     - $SEDCMD '/test_container.pro/d'        testsuite/Makefile.am # TODO! not ready
     - $SEDCMD '/test_fft_leak.pro/d'         testsuite/Makefile.am # TODO!
